--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,6 +3,104 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e84a50bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openpyxl import load_workbook\n",
+    "from openpyxl.styles import Font, PatternFill, Border, Side\n",
+    "from openpyxl.utils import get_column_letter\n",
+    "\n",
+    "# Load the workbook and select the worksheet\n",
+    "wb = load_workbook(\"your_output_file.xlsx\")\n",
+    "ws = wb[\"Sheet1\"]  # change sheet name if needed\n",
+    "\n",
+    "# Define styles\n",
+    "header_fill = PatternFill(start_color='ADD8E6', end_color='ADD8E6', fill_type='solid')  # Light Blue\n",
+    "bold_font = Font(bold=True)\n",
+    "thin_border = Border(\n",
+    "    left=Side(style='thin'), \n",
+    "    right=Side(style='thin'), \n",
+    "    top=Side(style='thin'), \n",
+    "    bottom=Side(style='thin')\n",
+    ")\n",
+    "\n",
+    "# Get max rows and columns\n",
+    "max_row = ws.max_row\n",
+    "max_col = ws.max_column\n",
+    "\n",
+    "# Apply styles\n",
+    "for row in ws.iter_rows(min_row=1, max_row=max_row, max_col=max_col):\n",
+    "    for cell in row:\n",
+    "        # Borders for all cells\n",
+    "        cell.border = thin_border\n",
+    "        # Header styling\n",
+    "        if cell.row == 1:\n",
+    "            cell.fill = header_fill\n",
+    "            cell.font = bold_font\n",
+    "\n",
+    "# Set column widths and apply autofilter\n",
+    "for col in range(1, max_col + 1):\n",
+    "    col_letter = get_column_letter(col)\n",
+    "    ws.column_dimensions[col_letter].width = 25\n",
+    "\n",
+    "# Apply autofilter\n",
+    "ws.auto_filter.ref = ws.dimensions\n",
+    "\n",
+    "# Save the updated workbook\n",
+    "wb.save(\"your_output_file.xlsx\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1b3e8724",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openpyxl import load_workbook\n",
+    "from openpyxl.worksheet.datavalidation import DataValidation\n",
+    "\n",
+    "# Load the workbook and select the sheet\n",
+    "file_path = \"data.xlsx\"a\n",
+    "\n",
+    "wb = load_workbook(file_path)\n",
+    "ws = wb[\"Sheet3\"]\n",
+    "\n",
+    "# Define the dropdown options\n",
+    "dropdown_options = ['Option1', 'Option2', 'Option3', 'Option4', 'Option5', 'Option6']\n",
+    "dropdown_formula = '\"' + ','.join(dropdown_options) + '\"'\n",
+    "\n",
+    "# Create data validation object\n",
+    "dv = DataValidation(type=\"list\", formula1=dropdown_formula, showDropDown=False, showErrorMessage=True)\n",
+    "dv.error = \"Please select a valid option from the list.\"\n",
+    "dv.errorTitle = \"Invalid Selection\"\n",
+    "\n",
+    "# Column letter for \"Reason for non billable\" (D)\n",
+    "col_letter = \"D\"\n",
+    "\n",
+    "# Apply dropdown while keeping existing values\n",
+    "for row in range(2, ws.max_row + 1):  # Assuming row 1 is the header\n",
+    "    cell = ws[f\"{col_letter}{row}\"]\n",
+    "    \n",
+    "    # If the cell is empty, set \"Select\"\n",
+    "    if cell.value is None or str(cell.value).strip() == \"\":\n",
+    "        cell.value = \"Select\"\n",
+    "    \n",
+    "    # Apply data validation to enforce selection from the list\n",
+    "    dv.add(cell)\n",
+    "\n",
+    "# Add validation to the sheet\n",
+    "ws.add_data_validation(dv)\n",
+    "\n",
+    "# Save the file\n",
+    "wb.save(file_path)\n",
+    "wb.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "31fb0c8d",
    "metadata": {},
    "outputs": [],
