--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,57 +3,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fe9464e",
+   "id": "bda32214",
    "metadata": {},
    "outputs": [],
    "source": [
     "def write_logs_to_excel(workbook_path):\n",
-    "    import openpyxl\n",
-    "    from openpyxl.styles import Font, PatternFill, Border, Side\n",
-    "    from openpyxl.utils import get_column_letter\n",
-    "    from datetime import datetime\n",
-    "    import getpass\n",
-    "\n",
     "    wb = openpyxl.load_workbook(workbook_path)\n",
-    "    \n",
-    "    # Delete existing Logs sheet if it exists\n",
     "    if 'Logs' in wb.sheetnames:\n",
     "        del wb['Logs']\n",
     "    ws = wb.create_sheet(\"Logs\")\n",
     "\n",
-    "    # ===== Add metadata: user and timestamp =====\n",
-    "    user = getpass.getuser()\n",
-    "    now = datetime.now().strftime(\"%d-%b-%Y %H:%M:%S\")\n",
-    "\n",
-    "    ws.append([\"Log Run By:\", user])\n",
-    "    ws.append([\"Run Time:\", now])\n",
-    "    ws.append([])  # Empty row for spacing\n",
-    "\n",
-    "    # ===== Sort logs by index =====\n",
+    "    # Sort logs\n",
     "    logs.sort(key=lambda x: x[0])\n",
     "\n",
-    "    # ===== Header row for actual logs =====\n",
+    "    # Header\n",
     "    ws.append([\"Log Description\", \"Value\"])\n",
     "    header_fill = PatternFill(start_color=\"ADD8E6\", end_color=\"ADD8E6\", fill_type=\"solid\")\n",
     "    bold_font = Font(bold=True)\n",
     "\n",
-    "    for cell in ws[ws.max_row]:\n",
+    "    for cell in ws[1]:\n",
     "        cell.fill = header_fill\n",
     "        cell.font = bold_font\n",
     "\n",
-    "    # ===== Data rows =====\n",
+    "    # Data rows\n",
     "    for _, desc, val in logs:\n",
     "        ws.append([desc, val])\n",
     "\n",
-    "    # ===== Apply borders to entire used range =====\n",
+    "    # Borders\n",
     "    thin = Side(border_style=\"thin\", color=\"000000\")\n",
     "    border = Border(left=thin, right=thin, top=thin, bottom=thin)\n",
-    "\n",
-    "    for row in ws.iter_rows(min_row=1, max_row=ws.max_row, max_col=2):\n",
+    "    for row in ws.iter_rows():\n",
     "        for cell in row:\n",
     "            cell.border = border\n",
     "\n",
-    "    # ===== Set column widths =====\n",
+    "    # Set column width\n",
     "    for col in range(1, 3):\n",
     "        ws.column_dimensions[get_column_letter(col)].width = 25\n",
     "\n",
