--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,6 +3,60 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9b3f1200",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# List of expected columns in the DataFrame (this should be the exact column names you expect)\n",
+    "expected_columns = ['psid', 'category', ' spoc', 'entity manager ps id', 'col2', 'col3 ']\n",
+    "\n",
+    "def check_column_names(df):\n",
+    "    # Capture columns from the input DataFrame\n",
+    "    input_columns = df.columns.tolist()\n",
+    "\n",
+    "    # Compare expected columns with input columns\n",
+    "    missing_columns = [col for col in expected_columns if col not in input_columns]\n",
+    "    extra_columns = [col for col in input_columns if col not in expected_columns]\n",
+    "\n",
+    "    # Raise an error if there are missing or extra columns\n",
+    "    if missing_columns or extra_columns:\n",
+    "        error_message = \"\"\n",
+    "        \n",
+    "        if missing_columns:\n",
+    "            missing_columns_str = \", \".join(missing_columns)\n",
+    "            error_message += f\"The following expected columns are missing or mismatched: {missing_columns_str}\\n\"\n",
+    "        \n",
+    "        if extra_columns:\n",
+    "            extra_columns_str = \", \".join(extra_columns)\n",
+    "            error_message += f\"The following columns are extra and not expected: {extra_columns_str}\\n\"\n",
+    "        \n",
+    "        raise ValueError(error_message)\n",
+    "\n",
+    "    print(\"All expected columns are present and matched.\")\n",
+    "\n",
+    "# Simulate loading an input file (replace with actual file reading logic)\n",
+    "input_data = {\n",
+    "    'PSID': [1, 2, 3],\n",
+    "    'Category': ['New', 'Old', 'New'],\n",
+    "    ' spoc': [None, 'SPOC1', 'SPOC2'],\n",
+    "    'Entity Manager PS ID': ['EM1', 'EM2', 'EM3'],\n",
+    "    'col2': ['Value1', 'Value2', 'Value3'],\n",
+    "    'col3 ': ['Data1', 'Data2', 'Data3']\n",
+    "}\n",
+    "df = pd.DataFrame(input_data)\n",
+    "\n",
+    "# Check column names in the DataFrame\n",
+    "try:\n",
+    "    check_column_names(df)\n",
+    "except ValueError as e:\n",
+    "    print(e)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6d3f533e",
    "metadata": {},
    "outputs": [],
