--- a/Split_Tool.ipynb
+++ b/Split_Tool.ipynb
@@ -2,6 +2,112 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "bbf893eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import openpyxl\n",
+    "from openpyxl.worksheet.datavalidation import DataValidation\n",
+    "from openpyxl.utils import get_column_letter\n",
+    "\n",
+    "def update_dropdown_for_file(\n",
+    "    file_path,\n",
+    "    source_sheet, key_col, value_col,\n",
+    "    dropdown_source_col,\n",
+    "    key_sheet_name, key_cell_to_update, clear_cell,\n",
+    "    dropdown_sheet_name, dropdown_cell\n",
+    "):\n",
+    "    wb = openpyxl.load_workbook(file_path)\n",
+    "    ws_source = wb[source_sheet]\n",
+    "    ws_key = wb[key_sheet_name]\n",
+    "    ws_dropdown = wb[dropdown_sheet_name]\n",
+    "\n",
+    "    # Get key from filename (without extension)\n",
+    "    key_value = os.path.splitext(os.path.basename(file_path))[0]\n",
+    "\n",
+    "    # Step 1: Build dictionary from key_col and value_col\n",
+    "    value_dict = {}\n",
+    "    for row in range(2, ws_source.max_row + 1):\n",
+    "        key = ws_source.cell(row=row, column=key_col).value\n",
+    "        val = ws_source.cell(row=row, column=value_col).value\n",
+    "        if key and val:\n",
+    "            if key not in value_dict:\n",
+    "                value_dict[key] = set()\n",
+    "            value_dict[key].add(val)\n",
+    "\n",
+    "    # Step 2: Insert \"*\" as first value for each key\n",
+    "    for k in value_dict:\n",
+    "        value_dict[k] = [\"*\"] + sorted(value_dict[k])\n",
+    "\n",
+    "    # Step 3: Update key view\n",
+    "    ws_key[key_cell_to_update] = key_value\n",
+    "    ws_key[clear_cell] = \"\"\n",
+    "\n",
+    "    # Step 4: Clear previous dropdown source values\n",
+    "    for row in range(3, ws_source.max_row + 1):\n",
+    "        ws_source.cell(row=row, column=dropdown_source_col).value = \"\"\n",
+    "\n",
+    "    # Step 5: Write new dropdown values from dict\n",
+    "    values = value_dict.get(key_value, [\"*\"])\n",
+    "    for i, val in enumerate(values, start=3):\n",
+    "        ws_source.cell(row=i, column=dropdown_source_col).value = val\n",
+    "\n",
+    "    # Step 6: Clear old validations\n",
+    "    ws_dropdown.data_validations.clear()\n",
+    "\n",
+    "    # Step 7: Create new validation formula\n",
+    "    col_letter = get_column_letter(dropdown_source_col)\n",
+    "    formula = f\"=OFFSET({source_sheet}!${col_letter}$3,0,0,COUNTA({source_sheet}!${col_letter}$3:${col_letter}$1000),1)\"\n",
+    "    dv = DataValidation(type=\"list\", formula1=formula, showDropDown=True)\n",
+    "    ws_dropdown.add_data_validation(dv)\n",
+    "    dv.add(ws_dropdown[dropdown_cell])\n",
+    "\n",
+    "    # Step 8: Set default dropdown value\n",
+    "    ws_dropdown[dropdown_cell] = \"*\"\n",
+    "\n",
+    "    wb.save(file_path)\n",
+    "    print(f\"Updated dropdowns in {os.path.basename(file_path)}\")\n",
+    "\n",
+    "\n",
+    "def update_dropdowns_l3(folder_path):\n",
+    "    for file in os.listdir(folder_path):\n",
+    "        if file.endswith(\".xlsm\"):\n",
+    "            update_dropdown_for_file(\n",
+    "                file_path=os.path.join(folder_path, file),\n",
+    "                source_sheet=\"Options\",\n",
+    "                key_col=4, value_col=5,          # D & E\n",
+    "                dropdown_source_col=2,           # B\n",
+    "                key_sheet_name=\"L3 View\",\n",
+    "                key_cell_to_update=\"B1\",\n",
+    "                clear_cell=\"E1\",\n",
+    "                dropdown_sheet_name=\"L4 View\",\n",
+    "                dropdown_cell=\"B1\"\n",
+    "            )\n",
+    "\n",
+    "def update_dropdowns_region(folder_path):\n",
+    "    for file in os.listdir(folder_path):\n",
+    "        if file.endswith(\".xlsm\"):\n",
+    "            update_dropdown_for_file(\n",
+    "                file_path=os.path.join(folder_path, file),\n",
+    "                source_sheet=\"Options\",\n",
+    "                key_col=9, value_col=10,         # I & J\n",
+    "                dropdown_source_col=2,           # B\n",
+    "                key_sheet_name=\"Region View\",\n",
+    "                key_cell_to_update=\"B1\",\n",
+    "                clear_cell=\"E1\",\n",
+    "                dropdown_sheet_name=\"Country View\",\n",
+    "                dropdown_cell=\"B1\"\n",
+    "            )\n",
+    "-\n",
+    "update_dropdowns_l3(\"Filtered_files_l3_wise\")\n",
+    "update_dropdowns_region(\"Filtered_files_region_wise\")\n",
+    "update_dropdowns_l3(output_folder_l3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "b6782ad4",
    "metadata": {},
