--- a/Split_Tool.ipynb
+++ b/Split_Tool.ipynb
@@ -3,7 +3,69 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbf893eb",
+   "id": "cb927794",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openpyxl import load_workbook\n",
+    "from openpyxl.worksheet.datavalidation import DataValidation\n",
+    "from collections import defaultdict\n",
+    "import os\n",
+    "\n",
+    "def update_l3_l4_dropdown(file_path):\n",
+    "    wb = load_workbook(file_path)\n",
+    "    ws_options = wb[\"Options\"]\n",
+    "    ws_l3_view = wb[\"L3 View\"]\n",
+    "    ws_l4_view = wb[\"L4 View\"]\n",
+    "\n",
+    "    # Get file name without extension\n",
+    "    file_name = os.path.splitext(os.path.basename(file_path))[0]\n",
+    "\n",
+    "    # Step 1: Create dictionary from Options D & E\n",
+    "    l3_to_l4 = defaultdict(list)\n",
+    "    for row in ws_options.iter_rows(min_row=3, max_col=5, values_only=True):\n",
+    "        l3_val, l4_val = row[2], row[3]  # D (index 2), E (index 3)\n",
+    "        if l3_val and l4_val:\n",
+    "            if l4_val not in l3_to_l4[l3_val]:\n",
+    "                l3_to_l4[l3_val].append(l4_val)\n",
+    "\n",
+    "    # Add '*' at beginning of each list\n",
+    "    for key in l3_to_l4:\n",
+    "        l3_to_l4[key] = ['*'] + l3_to_l4[key]\n",
+    "\n",
+    "    # Step 2: Write L3 (filename) into B1 of L3 View and clear E1\n",
+    "    ws_l3_view[\"B1\"].value = file_name\n",
+    "    ws_l3_view[\"E1\"].value = None\n",
+    "\n",
+    "    # Step 3: Update L4 View dropdown\n",
+    "    ws_l4_view[\"B1\"].value = \"*\"\n",
+    "    # Clear B3:B1000 just in case\n",
+    "    for row in ws_l4_view.iter_rows(min_row=3, max_row=1000, min_col=2, max_col=2):\n",
+    "        for cell in row:\n",
+    "            cell.value = None\n",
+    "\n",
+    "    # Step 4: Paste list into B3:B... and apply dropdown in B1\n",
+    "    l4_list = l3_to_l4.get(file_name, [\"*\"])\n",
+    "\n",
+    "    for i, val in enumerate(l4_list[1:], start=3):  # skip \"*\" for pasting\n",
+    "        ws_l4_view[f\"B{i}\"] = val\n",
+    "\n",
+    "    # Clear any existing validations\n",
+    "    ws_l4_view.data_validations.dataValidation = []\n",
+    "\n",
+    "    # Create dropdown in B1 from values in B3 onward (skip * in pasted list)\n",
+    "    list_range = f\"'L4 View'!$B$3:$B${2+len(l4_list[1:])}\"\n",
+    "    dv = DataValidation(type=\"list\", formula1=f\"={list_range}\", showDropDown=True)\n",
+    "    ws_l4_view.add_data_validation(dv)\n",
+    "    dv.add(ws_l4_view[\"B1\"])\n",
+    "\n",
+    "    wb.save(file_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9491dd78",
    "metadata": {},
    "outputs": [],
    "source": [
