--- a/Split_Tool.ipynb
+++ b/Split_Tool.ipynb
@@ -3,69 +3,77 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb927794",
+   "id": "f4c4da6e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "from openpyxl import load_workbook\n",
     "from openpyxl.worksheet.datavalidation import DataValidation\n",
     "from collections import defaultdict\n",
-    "import os\n",
     "\n",
-    "def update_l3_l4_dropdown(file_path):\n",
-    "    wb = load_workbook(file_path)\n",
-    "    ws_options = wb[\"Options\"]\n",
-    "    ws_l3_view = wb[\"L3 View\"]\n",
-    "    ws_l4_view = wb[\"L4 View\"]\n",
+    "def update_l3_l4_dropdowns_in_folder(folder_path):\n",
+    "    # Loop through all .xlsx files in the folder (excluding .xlsm)\n",
+    "    for file_name in os.listdir(folder_path):\n",
+    "        if file_name.endswith(\".xlsx\") and not file_name.startswith(\"~$\"):\n",
+    "            file_path = os.path.join(folder_path, file_name)\n",
+    "            try:\n",
+    "                wb = load_workbook(file_path)\n",
+    "                ws_options = wb[\"Options\"]\n",
+    "                ws_l3_view = wb[\"L3 View\"]\n",
+    "                ws_l4_view = wb[\"L4 View\"]\n",
     "\n",
-    "    # Get file name without extension\n",
-    "    file_name = os.path.splitext(os.path.basename(file_path))[0]\n",
+    "                # Get file name without extension\n",
+    "                name_key = os.path.splitext(file_name)[0]\n",
     "\n",
-    "    # Step 1: Create dictionary from Options D & E\n",
-    "    l3_to_l4 = defaultdict(list)\n",
-    "    for row in ws_options.iter_rows(min_row=3, max_col=5, values_only=True):\n",
-    "        l3_val, l4_val = row[2], row[3]  # D (index 2), E (index 3)\n",
-    "        if l3_val and l4_val:\n",
-    "            if l4_val not in l3_to_l4[l3_val]:\n",
-    "                l3_to_l4[l3_val].append(l4_val)\n",
+    "                # Step 1: Create L3 to L4 mapping from Options sheet\n",
+    "                l3_to_l4 = defaultdict(list)\n",
+    "                for row in ws_options.iter_rows(min_row=3, max_col=5, values_only=True):\n",
+    "                    l3_val, l4_val = row[2], row[3]  # Columns D & E (0-based index 2,3)\n",
+    "                    if l3_val and l4_val:\n",
+    "                        if l4_val not in l3_to_l4[l3_val]:\n",
+    "                            l3_to_l4[l3_val].append(l4_val)\n",
     "\n",
-    "    # Add '*' at beginning of each list\n",
-    "    for key in l3_to_l4:\n",
-    "        l3_to_l4[key] = ['*'] + l3_to_l4[key]\n",
+    "                # Add \"*\" at the beginning\n",
+    "                for k in l3_to_l4:\n",
+    "                    l3_to_l4[k] = [\"*\"] + l3_to_l4[k]\n",
     "\n",
-    "    # Step 2: Write L3 (filename) into B1 of L3 View and clear E1\n",
-    "    ws_l3_view[\"B1\"].value = file_name\n",
-    "    ws_l3_view[\"E1\"].value = None\n",
+    "                # Step 2: Update L3 View sheet\n",
+    "                ws_l3_view[\"B1\"].value = name_key\n",
+    "                ws_l3_view[\"E1\"].value = None\n",
     "\n",
-    "    # Step 3: Update L4 View dropdown\n",
-    "    ws_l4_view[\"B1\"].value = \"*\"\n",
-    "    # Clear B3:B1000 just in case\n",
-    "    for row in ws_l4_view.iter_rows(min_row=3, max_row=1000, min_col=2, max_col=2):\n",
-    "        for cell in row:\n",
-    "            cell.value = None\n",
+    "                # Step 3: Update L4 View sheet\n",
+    "                ws_l4_view[\"B1\"].value = \"*\"\n",
     "\n",
-    "    # Step 4: Paste list into B3:B... and apply dropdown in B1\n",
-    "    l4_list = l3_to_l4.get(file_name, [\"*\"])\n",
+    "                # Clear old values in B3:B1000\n",
+    "                for row in ws_l4_view.iter_rows(min_row=3, max_row=1000, min_col=2, max_col=2):\n",
+    "                    for cell in row:\n",
+    "                        cell.value = None\n",
     "\n",
-    "    for i, val in enumerate(l4_list[1:], start=3):  # skip \"*\" for pasting\n",
-    "        ws_l4_view[f\"B{i}\"] = val\n",
+    "                # Fill new L4 values under B3 onwards (excluding '*')\n",
+    "                l4_values = l3_to_l4.get(name_key, [\"*\"])\n",
+    "                for i, val in enumerate(l4_values[1:], start=3):  # exclude '*'\n",
+    "                    ws_l4_view[f\"B{i}\"] = val\n",
     "\n",
-    "    # Clear any existing validations\n",
-    "    ws_l4_view.data_validations.dataValidation = []\n",
+    "                # Clear existing validations\n",
+    "                ws_l4_view.data_validations.dataValidation = []\n",
     "\n",
-    "    # Create dropdown in B1 from values in B3 onward (skip * in pasted list)\n",
-    "    list_range = f\"'L4 View'!$B$3:$B${2+len(l4_list[1:])}\"\n",
-    "    dv = DataValidation(type=\"list\", formula1=f\"={list_range}\", showDropDown=True)\n",
-    "    ws_l4_view.add_data_validation(dv)\n",
-    "    dv.add(ws_l4_view[\"B1\"])\n",
+    "                # Apply dropdown in B1 referencing pasted values\n",
+    "                list_range = f\"'L4 View'!$B$3:$B${2 + len(l4_values[1:])}\"\n",
+    "                dv = DataValidation(type=\"list\", formula1=f\"={list_range}\", showDropDown=True)\n",
+    "                ws_l4_view.add_data_validation(dv)\n",
+    "                dv.add(ws_l4_view[\"B1\"])\n",
     "\n",
-    "    wb.save(file_path)\n"
+    "                wb.save(file_path)\n",
+    "                print(f\"✅ Updated: {file_name}\")\n",
+    "            except Exception as e:\n",
+    "                print(f\"❌ Failed to update {file_name}: {e}\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9491dd78",
+   "id": "9402e41d",
    "metadata": {},
    "outputs": [],
    "source": [
