--- a/Split_Tool.ipynb
+++ b/Split_Tool.ipynb
@@ -3,77 +3,72 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4c4da6e",
+   "id": "79e1d1b3",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from openpyxl import load_workbook\n",
     "from openpyxl.worksheet.datavalidation import DataValidation\n",
-    "from collections import defaultdict\n",
     "\n",
-    "def update_l3_l4_dropdowns_in_folder(folder_path):\n",
-    "    # Loop through all .xlsx files in the folder (excluding .xlsm)\n",
-    "    for file_name in os.listdir(folder_path):\n",
-    "        if file_name.endswith(\".xlsx\") and not file_name.startswith(\"~$\"):\n",
-    "            file_path = os.path.join(folder_path, file_name)\n",
-    "            try:\n",
-    "                wb = load_workbook(file_path)\n",
-    "                ws_options = wb[\"Options\"]\n",
-    "                ws_l3_view = wb[\"L3 View\"]\n",
-    "                ws_l4_view = wb[\"L4 View\"]\n",
+    "def update_l3_dropdowns_in_files(output_dir):\n",
+    "    for file in os.listdir(output_dir):\n",
+    "        if file.endswith(\".xlsx\") and not file.startswith(\"~$\"):\n",
+    "            filepath = os.path.join(output_dir, file)\n",
+    "            wb = load_workbook(filepath)\n",
+    "            ws_options = wb[\"Options\"]\n",
+    "            ws_l3 = wb.get_sheet_by_name(\"L3 View\")\n",
+    "            ws_l4 = wb.get_sheet_by_name(\"L4 View\")\n",
     "\n",
-    "                # Get file name without extension\n",
-    "                name_key = os.path.splitext(file_name)[0]\n",
+    "            # Extract the filename without extension as the L3 key\n",
+    "            l3_key = os.path.splitext(file)[0]\n",
     "\n",
-    "                # Step 1: Create L3 to L4 mapping from Options sheet\n",
-    "                l3_to_l4 = defaultdict(list)\n",
-    "                for row in ws_options.iter_rows(min_row=3, max_col=5, values_only=True):\n",
-    "                    l3_val, l4_val = row[2], row[3]  # Columns D & E (0-based index 2,3)\n",
-    "                    if l3_val and l4_val:\n",
-    "                        if l4_val not in l3_to_l4[l3_val]:\n",
-    "                            l3_to_l4[l3_val].append(l4_val)\n",
+    "            # Step 1: Put L3 value in B1 of L3 View\n",
+    "            ws_l3[\"B1\"] = l3_key\n",
+    "            # Step 2: Clear E1 (L3 View)\n",
+    "            ws_l3[\"E1\"] = \"\"\n",
     "\n",
-    "                # Add \"*\" at the beginning\n",
-    "                for k in l3_to_l4:\n",
-    "                    l3_to_l4[k] = [\"*\"] + l3_to_l4[k]\n",
+    "            # Step 3: Build dictionary from Options D (L3) and E (L4)\n",
+    "            l3_dict = {}\n",
+    "            for row in ws_options.iter_rows(min_row=3, min_col=4, max_col=5, values_only=True):\n",
+    "                key, val = row\n",
+    "                if key and val:\n",
+    "                    l3_dict.setdefault(key, set()).add(val)\n",
     "\n",
-    "                # Step 2: Update L3 View sheet\n",
-    "                ws_l3_view[\"B1\"].value = name_key\n",
-    "                ws_l3_view[\"E1\"].value = None\n",
+    "            # Step 4: Get matching L4 values for the current L3 key\n",
+    "            dropdown_values = [\"*\"]\n",
+    "            if l3_key in l3_dict:\n",
+    "                dropdown_values.extend(sorted(l3_dict[l3_key]))\n",
+    "            else:\n",
+    "                print(f\"Warning: L3 key '{l3_key}' not found in Options sheet of {file}\")\n",
+    "                continue\n",
     "\n",
-    "                # Step 3: Update L4 View sheet\n",
-    "                ws_l4_view[\"B1\"].value = \"*\"\n",
+    "            # Step 5: Clear existing validations from L4 View\n",
+    "            ws_l4.data_validations.dataValidation.clear()\n",
     "\n",
-    "                # Clear old values in B3:B1000\n",
-    "                for row in ws_l4_view.iter_rows(min_row=3, max_row=1000, min_col=2, max_col=2):\n",
-    "                    for cell in row:\n",
-    "                        cell.value = None\n",
+    "            # Step 6: Write dropdown values to a hidden column (e.g., column Z)\n",
+    "            start_row = 2\n",
+    "            for i, val in enumerate(dropdown_values):\n",
+    "                ws_l4.cell(row=start_row + i, column=26, value=val)  # Column Z = 26\n",
     "\n",
-    "                # Fill new L4 values under B3 onwards (excluding '*')\n",
-    "                l4_values = l3_to_l4.get(name_key, [\"*\"])\n",
-    "                for i, val in enumerate(l4_values[1:], start=3):  # exclude '*'\n",
-    "                    ws_l4_view[f\"B{i}\"] = val\n",
+    "            # Step 7: Create DataValidation dropdown from those cells\n",
+    "            end_row = start_row + len(dropdown_values) - 1\n",
+    "            dv_range = f\"$Z${start_row}:$Z${end_row}\"\n",
+    "            dv = DataValidation(type=\"list\", formula1=f\"={dv_range}\", showDropDown=True)\n",
+    "            ws_l4.add_data_validation(dv)\n",
+    "            dv.add(ws_l4[\"B1\"])\n",
     "\n",
-    "                # Clear existing validations\n",
-    "                ws_l4_view.data_validations.dataValidation = []\n",
+    "            # Optional: Hide the helper column\n",
+    "            ws_l4.column_dimensions['Z'].hidden = True\n",
     "\n",
-    "                # Apply dropdown in B1 referencing pasted values\n",
-    "                list_range = f\"'L4 View'!$B$3:$B${2 + len(l4_values[1:])}\"\n",
-    "                dv = DataValidation(type=\"list\", formula1=f\"={list_range}\", showDropDown=True)\n",
-    "                ws_l4_view.add_data_validation(dv)\n",
-    "                dv.add(ws_l4_view[\"B1\"])\n",
-    "\n",
-    "                wb.save(file_path)\n",
-    "                print(f\"✅ Updated: {file_name}\")\n",
-    "            except Exception as e:\n",
-    "                print(f\"❌ Failed to update {file_name}: {e}\")\n"
+    "            wb.save(filepath)\n",
+    "            print(f\"Dropdown updated in file: {file}\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9402e41d",
+   "id": "783e1f99",
    "metadata": {},
    "outputs": [],
    "source": [
