--- a/Split_Tool.ipynb
+++ b/Split_Tool.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79e1d1b3",
+   "id": "bdf9d650",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,64 +11,67 @@
     "from openpyxl import load_workbook\n",
     "from openpyxl.worksheet.datavalidation import DataValidation\n",
     "\n",
-    "def update_l3_dropdowns_in_files(output_dir):\n",
-    "    for file in os.listdir(output_dir):\n",
-    "        if file.endswith(\".xlsx\") and not file.startswith(\"~$\"):\n",
-    "            filepath = os.path.join(output_dir, file)\n",
+    "def update_l3_l4_dropdowns_in_split_files(folder_path):\n",
+    "    for file in os.listdir(folder_path):\n",
+    "        if file.endswith(\".xlsx\") and not file.startswith(\"~$\"):  # Ignore temp files\n",
+    "            filepath = os.path.join(folder_path, file)\n",
+    "            filename_key = os.path.splitext(file)[0]  # Get filename without extension\n",
+    "\n",
     "            wb = load_workbook(filepath)\n",
-    "            ws_options = wb[\"Options\"]\n",
-    "            ws_l3 = wb.get_sheet_by_name(\"L3 View\")\n",
-    "            ws_l4 = wb.get_sheet_by_name(\"L4 View\")\n",
-    "\n",
-    "            # Extract the filename without extension as the L3 key\n",
-    "            l3_key = os.path.splitext(file)[0]\n",
-    "\n",
-    "            # Step 1: Put L3 value in B1 of L3 View\n",
-    "            ws_l3[\"B1\"] = l3_key\n",
-    "            # Step 2: Clear E1 (L3 View)\n",
-    "            ws_l3[\"E1\"] = \"\"\n",
-    "\n",
-    "            # Step 3: Build dictionary from Options D (L3) and E (L4)\n",
-    "            l3_dict = {}\n",
-    "            for row in ws_options.iter_rows(min_row=3, min_col=4, max_col=5, values_only=True):\n",
-    "                key, val = row\n",
-    "                if key and val:\n",
-    "                    l3_dict.setdefault(key, set()).add(val)\n",
-    "\n",
-    "            # Step 4: Get matching L4 values for the current L3 key\n",
-    "            dropdown_values = [\"*\"]\n",
-    "            if l3_key in l3_dict:\n",
-    "                dropdown_values.extend(sorted(l3_dict[l3_key]))\n",
-    "            else:\n",
-    "                print(f\"Warning: L3 key '{l3_key}' not found in Options sheet of {file}\")\n",
+    "            if 'Options' not in wb.sheetnames or 'L3 View' not in wb.sheetnames or 'L4 View' not in wb.sheetnames:\n",
+    "                print(f\"Skipping {file}: required sheets missing.\")\n",
     "                continue\n",
     "\n",
-    "            # Step 5: Clear existing validations from L4 View\n",
-    "            ws_l4.data_validations.dataValidation.clear()\n",
+    "            ws_options = wb['Options']\n",
+    "            ws_l3 = wb['L3 View']\n",
+    "            ws_l4 = wb['L4 View']\n",
     "\n",
-    "            # Step 6: Write dropdown values to a hidden column (e.g., column Z)\n",
-    "            start_row = 2\n",
-    "            for i, val in enumerate(dropdown_values):\n",
-    "                ws_l4.cell(row=start_row + i, column=26, value=val)  # Column Z = 26\n",
+    "            # Step 1: Build L3→L4 dictionary from columns D and E\n",
+    "            l3_l4_dict = {}\n",
+    "            for row in ws_options.iter_rows(min_row=3, min_col=4, max_col=5, values_only=True):\n",
+    "                key, value = row\n",
+    "                if key:\n",
+    "                    l3_l4_dict.setdefault(key.strip(), []).append(value.strip() if value else \"\")\n",
     "\n",
-    "            # Step 7: Create DataValidation dropdown from those cells\n",
-    "            end_row = start_row + len(dropdown_values) - 1\n",
-    "            dv_range = f\"$Z${start_row}:$Z${end_row}\"\n",
-    "            dv = DataValidation(type=\"list\", formula1=f\"={dv_range}\", showDropDown=True)\n",
+    "            # Step 2: Insert filename into B1 of L3 View\n",
+    "            ws_l3.cell(row=1, column=2).value = filename_key  # B1 = col 2\n",
+    "\n",
+    "            # Step 3: Clear E1 in L3 View\n",
+    "            ws_l3.cell(row=1, column=5).value = None  # E1 = col 5\n",
+    "\n",
+    "            # Step 4: Build dropdown list: [\"*\"] + list of L4s for this L3\n",
+    "            l4_values = l3_l4_dict.get(filename_key, [])\n",
+    "            if not l4_values:\n",
+    "                print(f\"L3 key '{filename_key}' not found in Options sheet of '{file}'\")\n",
+    "                continue\n",
+    "\n",
+    "            dropdown_list = [\"*\"] + [val for val in l4_values if val]\n",
+    "\n",
+    "            # Step 5: Write these dropdown values to a helper column (e.g., Z)\n",
+    "            helper_col = 26  # Column Z\n",
+    "            start_row = 10\n",
+    "            for i, val in enumerate(dropdown_list):\n",
+    "                ws_l4.cell(row=start_row + i, column=helper_col).value = val\n",
+    "            end_row = start_row + len(dropdown_list) - 1\n",
+    "            dropdown_range = f\"${chr(64 + helper_col)}${start_row}:${chr(64 + helper_col)}${end_row}\"\n",
+    "\n",
+    "            # Step 6: Add data validation to B1 in L4 View\n",
+    "            dv = DataValidation(type=\"list\", formula1=f\"={dropdown_range}\", showDropDown=True)\n",
     "            ws_l4.add_data_validation(dv)\n",
-    "            dv.add(ws_l4[\"B1\"])\n",
     "\n",
-    "            # Optional: Hide the helper column\n",
-    "            ws_l4.column_dimensions['Z'].hidden = True\n",
+    "            # If B1 is merged, write to top-left only\n",
+    "            top_left_b1 = ws_l4.cell(row=1, column=2)\n",
+    "            top_left_b1.value = \"*\"\n",
+    "            dv.add(top_left_b1)\n",
     "\n",
     "            wb.save(filepath)\n",
-    "            print(f\"Dropdown updated in file: {file}\")\n"
+    "            print(f\"Updated dropdowns in: {file}\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "783e1f99",
+   "id": "db2eb477",
    "metadata": {},
    "outputs": [],
    "source": [
