--- a/Split_Tool.ipynb
+++ b/Split_Tool.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdf9d650",
+   "id": "989e462c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,67 +11,71 @@
     "from openpyxl import load_workbook\n",
     "from openpyxl.worksheet.datavalidation import DataValidation\n",
     "\n",
-    "def update_l3_l4_dropdowns_in_split_files(folder_path):\n",
+    "def update_l3_l4_dropdowns(folder_path):\n",
     "    for file in os.listdir(folder_path):\n",
-    "        if file.endswith(\".xlsx\") and not file.startswith(\"~$\"):  # Ignore temp files\n",
-    "            filepath = os.path.join(folder_path, file)\n",
-    "            filename_key = os.path.splitext(file)[0]  # Get filename without extension\n",
+    "        if not file.endswith(\".xlsx\") or file.startswith(\"~$\"):\n",
+    "            continue\n",
     "\n",
-    "            wb = load_workbook(filepath)\n",
-    "            if 'Options' not in wb.sheetnames or 'L3 View' not in wb.sheetnames or 'L4 View' not in wb.sheetnames:\n",
-    "                print(f\"Skipping {file}: required sheets missing.\")\n",
-    "                continue\n",
+    "        filepath = os.path.join(folder_path, file)\n",
+    "        filename_key = os.path.splitext(file)[0]\n",
     "\n",
-    "            ws_options = wb['Options']\n",
-    "            ws_l3 = wb['L3 View']\n",
-    "            ws_l4 = wb['L4 View']\n",
+    "        wb = load_workbook(filepath)\n",
+    "        if not all(sheet in wb.sheetnames for sheet in [\"Options\", \"L3 View\", \"L4 View\"]):\n",
+    "            print(f\"Skipping {file}: required sheets missing.\")\n",
+    "            continue\n",
     "\n",
-    "            # Step 1: Build L3→L4 dictionary from columns D and E\n",
-    "            l3_l4_dict = {}\n",
-    "            for row in ws_options.iter_rows(min_row=3, min_col=4, max_col=5, values_only=True):\n",
-    "                key, value = row\n",
-    "                if key:\n",
-    "                    l3_l4_dict.setdefault(key.strip(), []).append(value.strip() if value else \"\")\n",
+    "        ws_options = wb[\"Options\"]\n",
+    "        ws_l3 = wb[\"L3 View\"]\n",
+    "        ws_l4 = wb[\"L4 View\"]\n",
     "\n",
-    "            # Step 2: Insert filename into B1 of L3 View\n",
-    "            ws_l3.cell(row=1, column=2).value = filename_key  # B1 = col 2\n",
+    "        # Build mapping from D (L3) -> E (L4)\n",
+    "        l3_l4_map = {}\n",
+    "        for row in ws_options.iter_rows(min_row=3, min_col=4, max_col=5, values_only=True):\n",
+    "            l3, l4 = row\n",
+    "            if l3:\n",
+    "                l3 = str(l3).strip()\n",
+    "                l4 = str(l4).strip() if l4 else \"\"\n",
+    "                l3_l4_map.setdefault(l3, []).append(l4)\n",
     "\n",
-    "            # Step 3: Clear E1 in L3 View\n",
-    "            ws_l3.cell(row=1, column=5).value = None  # E1 = col 5\n",
+    "        if filename_key not in l3_l4_map:\n",
+    "            print(f\"L3 key '{filename_key}' not found in Options sheet of '{file}'\")\n",
+    "            continue\n",
     "\n",
-    "            # Step 4: Build dropdown list: [\"*\"] + list of L4s for this L3\n",
-    "            l4_values = l3_l4_dict.get(filename_key, [])\n",
-    "            if not l4_values:\n",
-    "                print(f\"L3 key '{filename_key}' not found in Options sheet of '{file}'\")\n",
-    "                continue\n",
+    "        dropdown_values = [\"*\"] + sorted(set(l3_l4_map[filename_key]))\n",
     "\n",
-    "            dropdown_list = [\"*\"] + [val for val in l4_values if val]\n",
+    "        # Clear temp area in col K & L (just in case)\n",
+    "        for row in ws_options.iter_rows(min_row=3, max_col=2, min_col=11):  # Col K (11) & L (12)\n",
+    "            row[0].value = None\n",
+    "            row[1].value = None\n",
     "\n",
-    "            # Step 5: Write these dropdown values to a helper column (e.g., Z)\n",
-    "            helper_col = 26  # Column Z\n",
-    "            start_row = 10\n",
-    "            for i, val in enumerate(dropdown_list):\n",
-    "                ws_l4.cell(row=start_row + i, column=helper_col).value = val\n",
-    "            end_row = start_row + len(dropdown_list) - 1\n",
-    "            dropdown_range = f\"${chr(64 + helper_col)}${start_row}:${chr(64 + helper_col)}${end_row}\"\n",
+    "        # Write to col K & L in Options\n",
+    "        start_row = 3\n",
+    "        for i, val in enumerate(dropdown_values):\n",
+    "            ws_options.cell(row=start_row + i, column=11).value = filename_key  # Col K\n",
+    "            ws_options.cell(row=start_row + i, column=12).value = val          # Col L\n",
     "\n",
-    "            # Step 6: Add data validation to B1 in L4 View\n",
-    "            dv = DataValidation(type=\"list\", formula1=f\"={dropdown_range}\", showDropDown=True)\n",
-    "            ws_l4.add_data_validation(dv)\n",
+    "        # Set dropdown in L4 View B1\n",
+    "        b1_cell = ws_l4.cell(row=1, column=2)\n",
+    "        b1_cell.value = \"*\"\n",
     "\n",
-    "            # If B1 is merged, write to top-left only\n",
-    "            top_left_b1 = ws_l4.cell(row=1, column=2)\n",
-    "            top_left_b1.value = \"*\"\n",
-    "            dv.add(top_left_b1)\n",
+    "        dv_range = f\"Options!$L${start_row}:$L${start_row + len(dropdown_values) - 1}\"\n",
+    "        dv = DataValidation(type=\"list\", formula1=f\"={dv_range}\", showDropDown=True)\n",
     "\n",
-    "            wb.save(filepath)\n",
-    "            print(f\"Updated dropdowns in: {file}\")\n"
+    "        ws_l4.add_data_validation(dv)\n",
+    "        dv.add(b1_cell)\n",
+    "\n",
+    "        # Update L3 View B1\n",
+    "        ws_l3.cell(row=1, column=2).value = filename_key\n",
+    "\n",
+    "        wb.save(filepath)\n",
+    "        print(f\"Updated: {file} with dropdown values in Options!L3:L and B1 set.\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db2eb477",
+   "id": "154738af",
    "metadata": {},
    "outputs": [],
    "source": [
